web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: web.poc.local #domain yang akan digunakan untuk mengakses deployment
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-server #nama service yang diexpose dari deployment
            port:
              number: 80
